<resources>
    <string name="app_name">ITV T.I.C</string>
    <string name="descripcion_app">Registro de Inspeccion Tecnica Vehicular</string>
    <string name="policia_boliviana">Policia Boliviana</string>
    <string name="Nro_telefono">Ingrese el Nro de telefono asignado</string>
    <string name="input_telefono">Ingrese el numero de telefono</string>
    <string name="codigo_sms">Solicitar Codigo de Verificacion</string>
    <string name="dnfr">DNFR</string>

    <string name="codigo_de_verificacion">Codigo de Verificacion</string>
    <string name="string_codigo">Hemos enviado un codigo de verificacion a tu numero telefonico espera por favor...</string>
    <string name="ingresar">ingresar</string>
    <string name="polbol">POLICIA BOLIVIANA</string>
    <string name="username">Nombre de usuario</string>
    <string name="password">Contrasena</string>
    <string name="espera">Espera por favor...</string>
    <string name="title_activity_modo_carga">ModoCargaActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="creador">Cap. Alvaro Roberto Bacarreza Arzabe</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Opciones</string>

    <string name="menu_reservas">Reservas</string>
    <string name="menu_historial">Historial</string>
    <string name="menu_puntoItv">Cambiar Punto </string>

    <string name="home_second">Home Second</string>
    <string name="titulo_vehiculo">Ingrese los datos del vehiculo</string>
    <string name="servicio">Servicio</string>
    <string name="ex_tipo_vehiculo">Tipo Vehiculo Ej:Rav4</string>
    <string name="nro_motor">Nro de motor</string>
    <string name="nro_chasis">Nro Chasis</string>
    <string name="confirmar_placa">Confirmar Placa</string>
    <string name="tipo_de_combustible">Tipo de combustible</string>
    <string name="datos_radicatoria">Datos de Radicatoria</string>
    <string name="fotografia_vehiculo">Fotografia Vehiculo</string>
    <string name="fotografia_persona">Fotografia Propietario o encargado</string>
    <string name="continuar">Continuar</string>
    <string-array name="tipoplaca">
        <item>RUAT</item>
        <item>OTRO</item>
    </string-array>
    <string-array name="tipocombustible">
        <item>---Seleccione---</item>
        <item>GASOLINA</item>
        <item>DIESEL</item>
        <item>GAS</item>
    </string-array>
    <string-array name="sexo">
        <item>Seleccione</item>
        <item>FEMENINO</item>
        <item>MASCULINO</item>
    </string-array>
    <string name="permission_camera_rationale">La camara es necesaria para la captura de imagenes de vehiculos como de personas en la ITV</string>
    <string name="permission_write_rationale">Es necesario para el guardado de imagenes de la ITV</string>
    <string name="permission_gps_rationale">La ubiscacion sera utilizada con fines de Auditoria</string>
    <string name="ok">Aceptar</string>
    <string name="text_buscar">Al Parecer el numero de certificado ya ha sido usado</string>
    <string name="buscar_ceritifcado">Nro Certificado</string>
    <string name="ej_placa">2369FFT</string>
    <string name="ej_fecha">01-01-2020</string>
    <string name="ej_certificado">0000001</string>
    <string name="ej_hora">00:00:00</string>
    <string name="ej_celular">71552715</string>
    <string name="dnfr_pol_bol">DNFR-Pol Bol</string>
    <string name="imprimir">imprimir</string>
    <string name="finalizar">finalizar</string>
    <string-array name="tieneono">
        <item>Seleccione</item>
        <item>TIENE</item>
        <item>NO TIENE</item>
    </string-array>

    <string-array name="buenomalo">
        <item>Seleccione</item>
        <item>BUENO</item>
        <item>REGULAR</item>
        <item>MALO</item>
    </string-array>
    <string-array name="prenopre">
        <item>Seleccione</item>
        <item>PRESENTO</item>
        <item>NO PRESENTO</item>
    </string-array>
    <string-array name="compincom">
        <item>Seleccione</item>
        <item>COMPLETO</item>
        <item>INCOMPLETO</item>

    </string-array>
</resources>
