<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="policiadnfr.gob.itvremolques.Data.Views.Activity.ui.home.ReservaFragment"
        android:label="@string/menu_reservas"
        tools:layout="@layout/fragment_reservas">

    </fragment>


    <fragment
        android:id="@+id/nav_gallery"
        android:name="policiadnfr.gob.itvremolques.Data.Views.Activity.ui.gallery.HistorialFragment"
        android:label="@string/menu_historial"
        tools:layout="@layout/fragment_historial" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="policiadnfr.gob.itvremolques.Data.Views.Activity.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_puntoItv"
        tools:layout="@layout/fragment_slideshow" />
</navigation>