<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Data.Views.Activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="58dp">

        <TextView
            android:id="@+id/tvdnfr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingTop="5dp"
            android:text="@string/polbol"
            android:textSize="20sp"
            android:gravity="center_horizontal"
            android:textAlignment="center"/>

        <ImageView
            android:id="@+id/imageView"
            android:layout_marginTop="20dp"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/escudorecauda"
            android:layout_gravity="center"
            android:contentDescription="@string/dnfr"
            />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginBottom="15dp">
            <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etusername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:padding="15dp" />

        </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etPasswordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="15dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnlogin"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="18dp"

                android:layout_weight="1"
                android:background="@drawable/btn_redondo"
                android:padding="15dp"
                android:text="@string/ingresar"
                android:textColor="@color/primary_light" />


        </LinearLayout>




    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>