<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Data.Views.Activity.CodigoVerificaActivity">

    <ImageView
        android:id="@+id/ivRecaudaciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:contentDescription="@string/dnfr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/escudorecauda" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        android:padding="25dp"
        android:paddingTop="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivRecaudaciones"
        app:layout_constraintVertical_bias="0.186">


        <TextView
            android:id="@+id/tvCodigo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/string_codigo"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/etCodigo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Codigo Verificacion"
            android:hint="@string/codigo_de_verificacion"
            android:inputType="phone"
            android:labelFor="@id/etTelefono"
            android:padding="20dp"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:textSize="17sp"
            android:textStyle="bold"
            tools:targetApi="o" />

        <ProgressBar
            android:id="@+id/pBCodigo"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="gone" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>