<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Data.Views.Activity.RegistroVLActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.053">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="5dp"
                android:text="@string/titulo_vehiculo"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/scrollView2"
                tools:layout_editor_absoluteX="-5dp" />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etservicio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/servicio"
                android:inputType="textCapCharacters"
                android:padding="15dp"
                android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:inputType="textCapCharacters"
                android:id="@+id/tipovl"
                android:layout_width="match_parent"
                android:padding="15dp"
                android:textSize="15sp"
                android:layout_height="wrap_content"
                android:hint="@string/ex_tipo_vehiculo"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etmotor"
                    android:textSize="15sp"
                    android:inputType="textCapCharacters"
                    android:layout_width="match_parent"
                    android:padding="15dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/nro_motor"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etchasis"
                android:inputType="textCapCharacters"
                android:textSize="15sp"
                android:layout_width="match_parent"
                android:padding="15dp"
                android:layout_height="wrap_content"
                android:hint="@string/nro_chasis"/>
        </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/tipo_de_combustible"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/spitipocombustible"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="25dp"
                android:background="@color/primary_light"
                android:entries="@array/tipocombustible"
                android:spinnerMode="dialog"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/datos_radicatoria"
                android:textSize="15sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="Departamento"
                    android:textSize="15sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="Provincia"
                    android:textSize="15sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Spinner
                    android:id="@+id/spiraddpto"
                    android:layout_width="180dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/primary_light"
                    android:spinnerMode="dialog"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <Spinner
                    android:id="@+id/spiradprov"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/primary_light"
                    android:spinnerMode="dialog"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="Municipio"
                    android:textSize="15sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="Confirmar placa"
                    android:textSize="15sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Spinner
                    android:id="@+id/spiradmun"
                    android:layout_width="180dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/primary_light"
                    android:spinnerMode="dialog"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:id="@+id/etplacaconfim"
                    android:inputType="textCapCharacters"
                    android:textSize="15sp"

                    />

            </LinearLayout>
            <Button
                android:id="@+id/btnRegistroVL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="18dp"
                android:layout_weight="1"
                android:textColor="@color/primary_light"
                android:background="@drawable/btn_redondo"
                android:padding="15dp"
                android:text="Continuar" />

        </LinearLayout>



    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>